fixed menu alignment bug in post-game

--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -11,6 +11,18 @@
 	justify-content: flex-start;
 }
 
+.timer-group {
+	flex:1;
+}
+
+.button-group {
+	flex: 2;
+}
+
+.button-group-right {
+	justify-content: flex-end;
+}
+
 .menu-button {
 	background-color: white;
 	border: 1px solid black;
